====== WMProxy version 2.0.0 (gLite 1.5) ====== 
First available version