@@ -1,2 +1,3 @@
-====== WMProxy version 2.0.0 (gLite 1.5) ====== 
-First available version
+====== WMProxy api python version 2.0.0 (gLite 1.5) ====== 
+2006, 0ct 05 
+jobRegisterJSDL method added
